# vr_test

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  TODO.txt  VR_TEST.rc  VR_TEST.sln  VR_TEST.vcxproj  VR_TEST.vcxproj.filters  core.rc  resource.h
core/: fallback.frag  fallback.vert
src/: App.h  CMakeLists.txt  VrTestConfig.h.in  main.cpp  pch.h
src/app/: App.cpp  App.h
src/engine/: EngineInstance.cpp  EngineInstance.h
src/files/: FileManager.cpp  FileManager.h
src/gl/: GlDebug.h  GlInstance.cpp  GlInstance.h  RenderTarget.cpp  RenderTarget.h  ShaderProgram.cpp  ShaderProgram.h
src/vr/: VrInstance.cpp  VrInstance.h
src/windows/: WinApp.cpp  WinApp.h  Window.cpp  Window.h  main.cpp  win.cpp  win.h
